--- a/app/views/members/view.rhtml
+++ b/app/views/members/view.rhtml
@@ -23,7 +23,7 @@
   </div>
 
   <ul class="feed">
-    <%= render :partial => 'link', :collection => @links %>
+    <%= render :partial => 'link', :collection => @links, :locals => { :member => @member } %>
 	</ul>
 
   <%= will_paginate @links %>
