Visual changes to management area. Searching for members now works.

--- a/app/views/layouts/_quickbar.rhtml
+++ b/app/views/layouts/_quickbar.rhtml
@@ -12,6 +12,7 @@
       </p>
     <% end %>
     <ul id="quick_navigation">
+      <%- if @master_member.superuser? -%><li><%= link_to "Management", :controller => 'management/management' %></li><%- end -%>
       <li><%= link_to "My Account", :controller => 'members', :action => 'view', :username => @master_member.username %></li>
       <li><%= link_to "Settings", :controller => 'members', :action => 'settings' %></li>
       <li><%= link_to "Logout", :controller => 'members', :action => 'logout' %></li>
