--- a/app/views/layouts/management.rhtml
+++ b/app/views/layouts/management.rhtml
@@ -14,6 +14,8 @@
     <a href="#content"><strong>Jump to content</strong></a>
   </div>
   
+  <p id="management_bar">You are in the Management area of The Urld!</p>
+  
   <%= render :partial => '/layouts/quickbar' %>
   
   <div id="container">
