--- a/app/views/sidebars/management/members/default.rhtml
+++ b/app/views/sidebars/management/members/default.rhtml
@@ -7,7 +7,7 @@
       <%= label_tag "member", "email_address" %> <%= text_field "member", "email_address" %>
       <%= label_tag "member", "first_name" %> <%= text_field "member", "first_name" %>
       <%= label_tag "member", "last_name" %> <%= text_field "member", "last_name" %>
-      <%= submit_tag "Search" %>
     </p>
+    <p><%= submit_tag "Search" %></p>
   <% end %>
 </div>
