--- a/app/views/management/members/search.rhtml
+++ b/app/views/management/members/search.rhtml
@@ -1,4 +1,4 @@
-<h2>Members</h2>
+<h2>Member Search Results</h2>
 <div class="box">  
   <table width="100%" cellspacing="1" class="style">
     <colgroup>
