Improvements to member section of Mangement

--- a/app/views/categories/_link.rhtml
+++ b/app/views/categories/_link.rhtml
@@ -14,6 +14,6 @@
   <p id="info_<%= link.id %>" class="desc" style="display: none;">
     <%= link_to domain.domain, "#{domain.scheme}://#{domain.domain}", :class => "disguised" %> &#8212; <span class="text">Temporarily blank for now.</span>
     <%- if category -%>Filed in <em><%= link_to category.name, :controller => 'categories', :action => 'view', :id => category.id %></em> on<%- end -%>
-    <em><%= longdate(link.created_on) %></em> by <em><%= link_to link.member.username, :controller => 'members', :action => 'view', :username => link.member.username %></em>
+    <em><%= longdate(link.created_on) %></em> by <em><%= link_to link.members.last.username, :controller => 'members', :action => 'view', :username => link.members.last.username %></em>
   </p>
 </li>
