--- a/app/views/sidebars/management/members/default.rhtml
+++ b/app/views/sidebars/management/members/default.rhtml
@@ -1,13 +1,8 @@
+<h3>Actions</h3>
+<h4>Main Actions</h4>
+<ul>
+  <li><%= link_to "Add a member", :action => 'new' %></li>
+</ul>
+
 <h3>Find a Member</h3>
-<div class="box">
-  <% form_tag :action => 'search' do %>
-    <p>Fill out as much as possible</p>
-    <p>
-      <%= label_tag "member", "username" %> <%= text_field "member", "username" %>
-      <%= label_tag "member", "email_address" %> <%= text_field "member", "email_address" %>
-      <%= label_tag "member", "first_name" %> <%= text_field "member", "first_name" %>
-      <%= label_tag "member", "last_name" %> <%= text_field "member", "last_name" %>
-    </p>
-    <p><%= submit_tag "Search" %></p>
-  <% end %>
-</div>
+<%= render :partial => '/sidebars/management/members/search' %>
