--- a/app/views/layouts/_quickbar.rhtml
+++ b/app/views/layouts/_quickbar.rhtml
@@ -1,8 +1,8 @@
 <div id="quick_bar_container">
   <div id="quick_bar">
     <%- if session[:logged_in] == true -%>
-    <p class="post_url"><%= link_to "Post a URL", :controller => 'links', :action => 'new' %></p>
-    <% form_tag :controller => 'links', :action => 'new' do %>
+    <p class="post_url"><%= link_to "Post a URL", :controller => '/links', :action => 'new' %></p>
+    <% form_tag :controller => '/links', :action => 'new' do %>
       <p>
         <%= label_tag "link", "uri", :name => "Quick submit" %>
         <%= text_field "link", "uri", :value => "http://", :style => "color: #aaa;", :onfocus => "if ('http://' == this.value) this.value = ''; this.style.color = '#000';", :onblur => "if (this.value.length < 1) { this.value = 'http://'; this.style.color = '#aaa'; }" %>
@@ -13,15 +13,15 @@
     <% end %>
     <ul id="quick_navigation">
       <%- if @master_member.superuser? -%><li><%= link_to "Management", :controller => 'management/management' %></li><%- end -%>
-      <li><%= link_to "My Account", :controller => 'members', :action => 'view', :username => @master_member.username %></li>
-      <li><%= link_to "Settings", :controller => 'members', :action => 'settings' %></li>
-      <li><%= link_to "Logout", :controller => 'members', :action => 'logout' %></li>
+      <li><%= link_to "My Account", :controller => '/members', :action => 'view', :username => @master_member.username %></li>
+      <li><%= link_to "Settings", :controller => '/members', :action => 'settings' %></li>
+      <li><%= link_to "Logout", :controller => '/members', :action => 'logout' %></li>
     </ul>
     <%- else -%>
     <ul id="quick_navigation">
       <li><a href="#">About</a></li>
-      <li><%= link_to "Login", :controller => 'members', :action => 'login' %></li>
-      <li><%= link_to "Create An Account", :controller => 'members', :action => 'register' %></li>
+      <li><%= link_to "Login", :controller => '/members', :action => 'login' %></li>
+      <li><%= link_to "Create An Account", :controller => '/members', :action => 'register' %></li>
     </ul>
     <%- end -%>
   </div>
