--- a/app/views/management/members/_member.rhtml
+++ b/app/views/management/members/_member.rhtml
@@ -1,6 +1,6 @@
 <tr class="<%= cycle("row1", "row2") %>">
-  <td><%= link_to truncate(member.username, 25), :action => 'view', :name => member.username %> <%= "<span class=\"tag superuser\">superuser</span>" if member.superuser? %></td>
-  <td><%= mail_to truncate(member.email_address, 30) %></td>
+  <td><%= link_to truncate(member.username, 25), :action => 'edit', :username => member.username %> <%= "<span class=\"tag superuser\">superuser</span>" if member.superuser? %></td>
+  <td><%= mail_to truncate(member.email_address, 20) %></td>
   <td><%= shortdate member.created_on %></td>
   <td><%= shortdate member.updated_on %></td>
   <td align="center"><%= member.number_of_links %></td>
