--- a/app/views/sidebars/default.rhtml
+++ b/app/views/sidebars/default.rhtml
@@ -1,5 +1,5 @@
 <%- if session[:logged_in] == true -%>
-<h3>Hi, <%= link_to @master_member.username, :controller => 'members', :action => 'view', :username => @master_member.username %></h3>
+<h3>Hi, <%= link_to @master_member.username, :controller => '/members', :action => 'view', :username => @master_member.username %></h3>
 <div class="box">
   <h5>You &amp; Your Friends</h5>
   <p class="friends">
@@ -9,7 +9,7 @@
 <%- else -%>
 <h3>Login</h3>
 <div class="box">
-  <% form_tag :controller => 'members', :action => 'login' do %>
+  <% form_tag :controller => '/members', :action => 'login' do %>
     <p>
       <%= label_tag "member", "username" %> <%= text_field "member", "username" %>
       <%= label_tag "member", "password", :name => "Password <strong><a href=\"#\">?</a></strong>" %> <%= password_field "member", "password" %>
@@ -23,16 +23,16 @@
 <h4>General Categories</h4>
 <ul>
   <%- @categories.each do |c| -%>
-  <li><%= link_to c.name, :controller => 'categories', :action => 'view', :name => c.name %></li>
+  <li><%= link_to c.name, :controller => '/categories', :action => 'view', :name => c.name %></li>
   <%- end -%>
-  <li><%= link_to "Uncategorized", :controller => 'categories', :action => 'view', :name => "Uncategorized" %></li>
+  <li><%= link_to "Uncategorized", :controller => '/categories', :action => 'view', :name => "Uncategorized" %></li>
 </ul>
 
 <%- unless @subcategories.empty? -%>
 <h4>Subcategories</h4>
 <ul>
   <%- @subcategories.each do |c| -%>
-  <li><%= link_to c.name, :controller => 'categories', :action => 'view', :name => c.name %></li>
+  <li><%= link_to c.name, :controller => '/categories', :action => 'view', :name => c.name %></li>
   <%- end -%>
 </ul>
 <%- end -%>
