--- a/app/views/sidebars/members/default.rhtml
+++ b/app/views/sidebars/members/default.rhtml
@@ -10,7 +10,7 @@
     <%- end -%>
     <p class="button"><%= link_to "Send message", :action => 'new_message', :username => @member.username %></p>
     <%- end -%>
-    <p class="button"><%= link_to "Export URLs", :action => 'export_urls', :username => @member.username %></p>
+    <p class="button"><%= link_to "Export URLs", :action => 'export', :username => @member.username %></p>
     <br class="clear" />
   </div>
   
