I forgot to include the column type

--- a/app/views/layouts/management.rhtml
+++ b/app/views/layouts/management.rhtml
@@ -14,7 +14,7 @@
     <a href="#content"><strong>Jump to content</strong></a>
   </div>
   
-  <p id="management_bar">You are in the Management area of The Urld!</p>
+  <p id="management_bar">You are in the Management area of The Urld! &mdash; &quot;With great power comes great responsibility.&quot;</p>
   
   <%= render :partial => '/layouts/quickbar' %>
   
